FEAT: Added logit handler
